# Tethys-meteoraster

./: AGENTS.md  CLAUDE.md  README.md  environment.yml  pyproject.toml  setup.py
.github/: copilot-instructions.md
meteoraster/: meteoraster.py  resample.py
tests/: test_deprecations.py  test_meteo_raster_extra.py  test_resample.py
